frontend/src/styles/global.css
.container {
  margin-top: 2%;
  padding-bottom: 7rem;
}

.panel {
  box-shadow: 0 2px 4px 0 rgba(150, 150, 150, 0.5);
}

.fullWidth {
  width: 100vw;
}

.fullHeight {
  height: 70vh;
}

.sigma-modal {
  width: 90vw;
  max-width: 90vw;
}
/* .modal-dialog {
  width: 100vw;
} */

.modal-header {
  background-color: #337ab7;
  padding: 16px 16px;
  color: #fff;
  border-bottom: 2px dashed #337ab7;
}

.sigmaDarkBg {
  background-color: #636463;
}

.lightBgColor {
  background-color: #efefef;
}

.sigmaBlue {
  background-color: #006486;
}

.sigmaRed {
  background-color: #eb590a;
}

.rounded-ltlb-pill {
  border-radius: 31px 0 0 31px;
}

.rounded-rtrb-pill {
  border-radius: 0 31px 31px 0;
}

.sigmaStatusBar {
  border-radius: 0 0 0 5px;
  box-shadow: 0 2px 4px 0 rgba(150, 150, 150, 0.5);
}

.hidden {
  display: none;
}

@media only screen and (min-width: 480px) {
  #mapMenuItem {
    display: none;
  }
}

@media only screen and (max-width: 480px) {
  #myMap {
    display: none;
  }
  #mapMenuItem {
    display: block;
  }
  .sigmaStatusBar {
    border-radius: 0 0 5px 5px;
  }
  .sigmaStatusBar > div > div > h5 {
    max-width: 90vw;
  }
  .sigmaStatusBar > div > div > h5 > span:first-child {
    width: 50vw;
    max-width: 50vw;
  }
}

.btn-primary {
  background-color: #006486;
}
.btn-primary:hover {
  background-color: #006486;
}

.btn-seconday {
  background-color: #636463;
}

